# Bender_emociones

Docker/: Dockerfile  docker-compose.yml
arduino/boca_emociones.ino/: boca_emociones.ino.ino
arduino/boca_emociones_v2.ino/: boca_emociones_v2.ino.ino
arduino/emociones_complejas_bender/: emociones_complejas_bender.ino
arduino/emociones_complejas_bender_3/: emociones_complejas_bender_3.ino
arduino/emociones_complejas_bender_4/: emociones_complejas_bender_4.ino
arduino/emociones_complejas_bender_5/: emociones_complejas_bender_5.ino
arduino/emociones_complejas_bender_7/: emociones_complejas_bender_7.ino
src/: vlm_llama.py  vlm_openai.py
src/bender_emotion/: package.xml  setup.cfg  setup.py
src/bender_emotion/bender_emotion/: action_server.py  emo_serial.py  emo_serial_propio.py  emotion_publisher_node.py  neck.py  speak_action_server.py  vlm_llama.py
src/bender_emotion/launch/: emotion_system.launch.py
src/custom_action_interfaces/: CMakeLists.txt  package.xml
src/custom_action_interfaces/action/: Emotion.action  SpeakEmotion.action
