<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bender_emotion</name>
  <version>0.0.0</version>
  <description>Módulo de emociones del robot Bender.</description>

  <maintainer email="samuel@example.com">samuel</maintainer>
  <license>Apache-2.0</license>

  <!-- Herramienta de build para paquetes Python -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencias de ejecución -->
  <exec_depend>custom_action_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <!-- Dependencias de test -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

